--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width initial-scale=1.0">
-   <!-- <link rel="stylesheet" href="../src/assets/css/main.css"> -->
+   <link type="image/png" sizes="16x16" rel="icon" href="../src/assets/img/favicon.png">
    <title>Leaderboard</title>
 </head>
 
@@ -15,7 +15,9 @@
          <section class="table-section" id="tableSection">
             <div class="score-title">
                <h2 class="title">Recent Scores</h2>
-               <button class="btn" type="button" name="refresh" id="refreshBtn">Refresh</button>
+               <button class="btn" type="button" name="refresh" id="refreshBtn">
+                  <img alt="Refresh Icon" class="btn-img" src="../src/assets/img/refresh.png" />
+               </button>
             </div>
             <div class="table-scroll">
                <table class="score-table" id="scoreTable">
@@ -23,20 +25,19 @@
             </div>
          </section>
          <form id="addForm" class="add-form">
-            <fieldset>
-               <legend>Add Your Score </legend>
+            <h2 class="score-heading">Add Scores</h2>
+            <div class="inputs">
                <input type="text" name="name" id="name" placeholder="Your name" required>
                <input type="text" name="score" id="score" placeholder="Your Score" required>
-               <div class="btn-container">
-                  <button class="btn" type="button" name="submit" id="submitBtn">Submit</button>
-               </div>
-            </fieldset>
+            </div>
             <p class="success hidden" id="success"></p>
+            <div class="btn-container">
+               <button class="btn" type="button" name="submit" id="submitBtn">
+                  <img alt="Submit Icon" class="btn-img" src="../src/assets/img/submit.png" />
+               </button>
+            </div>
          </form>
       </div>
-      <footer class="copyright">
-         <p class="copyright-content">Copyright @ RB 2022</p>
-      </footer>
    </div>
    <script src="./assets/js/main.js" type="module"></script>
 </body>
